# tlbo_optimization

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/tlbo_optimization/: __init__.py  tlbo_optimization.py
tests/: __init__.py  test_tlbo_optimization.py
